# rootFinder

./: LICENSE  rootFinder.cabal
src/Math/: RootFinder.hs
