cabal-version:      2.4
name:               rootFinder
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Antonov Volodymyr
maintainer:         azazaka2002@gmail.com

-- A copyright notice.
-- copyright:
category:           Math
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Math.RootFinder

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite rootFinder-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          RootFinderTest.hs
    build-depends:    base ^>=4.16.3.0
